fix security issue: 2962895, 2962896, 2962894

--- a/savedsearch-schema/build.gradle
+++ b/savedsearch-schema/build.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'artifactory'
-apply plugin: 'maven'
+apply plugin: 'artifactory-publish'
+apply plugin: 'maven-publish'
 
 // Override default artifactory ID for publishing through artifactory
 ext.archivesBaseName = archiveBaseName
